(env
 (dev
  ; -33 for unused open because some are added for ocaml-light and field access
  ; -6 to be ok to omit labels for ocaml-light compliance
  (flags (:standard -w -33-6)))
)

; The dirs directive below is needed when using dune 2.7 (see dune-project)
; principia/ contain/ SRC/cmd/ROOT recursive symlink that dune does not like
; there are other (dirs :standard \ docs) in shell/dune, mk/dune, vcs/dune
(dirs :standard \ principia generators docs)
