opam-version: "2.0"
version: "0.14"
synopsis:
  "Xix is Xix"
description: """
Xix is Xix

For more information see https://github.com/aryx/xix
"""
maintainer: ["Yoann Padioleau <yoann.padioleau@gmail.com>"]
authors: ["Yoann Padioleau <yoann.padioleau@gmail.com>"]
license: "LGPL-2.1-only WITH OCaml-LGPL-linking-exception"
homepage: "https://github.com/aryx/xix"
bug-reports: "https://github.com/aryx/xix/issues"
depends: [
  # To handle ppx_deriving and Cap.mli advanced object types
  "ocaml" {>= "4.09.1"}
  # Do not depend on anything except those 3! Xix should limit its external
  # dependencies as much as possible, so it can boostrap itself more easily
  # (and also so we can compile xix with ocaml-light and on plan9).
  "stdcompat"
  "ocamlfind"
  "ppx_deriving"
  "ppxlib" {<= "0.32.0"} # this forces ocaml <= 5.1.1
  # TODO just for version_control/ but should switch to Unzip.ml
  "camlzip"
  # Extra deps when compiling xix with (optional!) advanced tooling
  "dune"
  "ounit2"
  "testo"
  "ocamlformat"
  "merlin"
]
build: [
  "echo todo"
]
dev-repo: "git+https://github.com/aryx/xix.git"
