(executable
 (name Main)
 (libraries
   str unix
   xix_commons
   xix_cpp
   xix_objects
 )
 ; 'byte' is for ocamldebug
 (modes native byte))

(ocamllex Lexer_asm5)
(ocamlyacc Parser_asm5)

(install
 (package xix)
 (section bin)
 (files
  (Main.exe as 5a)
  ; useful to debug, see ../../debug and ocamldebug
  (Main.bc as 5a.bc))
)
