(executable
 (name Main)
 (libraries
   unix
   xix_commons
   xix_cpp
   xix_objects
 )
 (preprocess (pps ppx_deriving.show))
 ; 'byte' is for ocamldebug
 (modes native byte))

(ocamllex Lexer_asm)
(ocamlyacc Parser_asm5)
(ocamlyacc Parser_asmv)
(ocamlyacc Parser_asmi)

(install
 (package xix)
 (section bin)
 (files
  (Main.exe as o5a)
  (Main.exe as ova)
  (Main.exe as oia)
  ; useful to debug, see ../../debug and ocamldebug
  (Main.bc as o5a.bc))
)

(dirs :standard \ docs)
