(executable
 (name Main)
 (libraries
   str unix
   xix_commons
   xix_cpp
   xix_objects
 )
 ; 'byte' is for ocamldebug
 (modes native byte))

(ocamllex Lexer)
(ocamlyacc Parser)

(install
 (package xix)
 (section bin)
 (files
  (Main.exe as o5c)
  ; useful to debug, see ../../debug and ocamldebug
  (Main.bc as o5c.bc))
)
