(executable
 (name Main)
 (modules Main)
 (libraries
   xix_compiler
 )
 ; 'byte' is for ocamldebug
 (modes native byte))

(library
  (name xix_compiler)
  (wrapped true)

  ; coupling: mkfile SRC variable
  (modules
    Flags
    Type Meta_type   Storage Meta_storage
    Ast Meta_ast
    Dumper_
    Globals
    Error
    Parser Lexer Parse
    Arch_compiler
    Check Eval_const Typecheck
    Rewrite
    Codegen
    Arch5 Archv Archi
    CLI
  )
 (libraries
   str unix
   xix_commons
   xix_cpp
   xix_objects
 )
 (preprocess (pps ppx_deriving.show))
 ; 'byte' is for ocamldebug
 (modes native byte))

(ocamllex Lexer)
(ocamlyacc Parser)

(install
 (package xix)
 (section bin)
 (files
  (Main.exe as o5c)
  (Main.exe as ovc)
  (Main.exe as oic)
  ; useful to debug, see ../../debug and ocamldebug
  (Main.bc as o5c.bc))
)

(dirs :standard \ docs)
