(executable
 (name main)
 (libraries
   str unix
   xix_commons
   xix_collections
 )
 ; 'byte' is for ocamldebug
 (modes native byte))

; lex
(ocamllex lexer)
; yacc
; old: (ocamlyacc parser)
(rule
 (targets parser.ml parser.mli)
 (deps parser.mly)
 (action
  (progn
   (run ocamlyacc %{dep:parser.mly})
   ; must take: /*(*s: copyright ocamlyacc *)*/
   ; and just remove it
   (run perl -p -i -e "s#/[*].*[sex]:.*[*]/##" parser.ml)
   )))

(install
 (package xix)
 (section bin)
 (files
  ; weird: if I use ocamllex I get dune cycle error, weird,
  ; probably because of ocamllex is a special name
  (main.exe as olex)
  ; useful to debug, see ../../debug and ocamldebug
  (main.bc as olex.bc))
)
