(executable
 (name Main)
 (libraries
   str unix
   xix_commons
   xix_collections
   xix_objects
   xix_executables
 )
 ; 'byte' is for ocamldebug
 (modes native byte))

(install
 (package xix)
 (section bin)
 (files
  (Main.exe as 5l)
  ; useful to debug, see ../../debug and ocamldebug
  (Main.bc as 5l.bc))
)
