(executable
 (name Main)
 (libraries
   unix
   xix_commons
   xix_objects xix_libraries
   xix_executables
 )
 (preprocess (pps ppx_deriving.show))
 ; 'byte' is for ocamldebug
 (modes native byte))

(install
 (package xix)
 (section bin)
 (files
  (Main.exe as o5l)
  (Main.exe as ovl)
  ; useful to debug, see ../../debug and ocamldebug
  (Main.bc as o5l.bc))
)

(dirs :standard \ docs)
