(executable
 (name Main)
 (modules Main)
 (libraries
   str unix
   xix_mk
 )
 ; 'byte' is for ocamldebug
 (modes native byte))

(library
  (name xix_mk)
  ; need wrapped true so that we can have both mk/CLI.ml and shell/CLI.ml
  ; and the ability to call them from tests/Test.ml together
  (wrapped true)
  ; coupling: mkfile SRC variable
  (modules
    Globals Flags
    Ast   Parser Lexer Parse
    Shellenv Shell
    Percent Env Rules   Eval
    File Graph
    Job   Scheduler Outofdate
    CLI
  )
  (libraries
   xix_commons
   xix_profiling
  )
 (preprocess (pps ppx_deriving.show ppx_profiling))
  )

(ocamllex Lexer)
;old: (ocamlyacc Parser)
(rule
 (targets Parser.ml Parser.mli)
 (deps Parser.mly)
 (action
  (progn
   (run ocamlyacc %{dep:Parser.mly})
   (run perl -p -i -e "s#/[*].*[sex]:.*[*]/##" Parser.ml)
   )))


(install
 (package xix)
 (section bin)
 (files
  (Main.exe as omk)
  ; useful to debug, see ../../debug and ocamldebug
  (Main.bc as omk.bc))
)

(dirs :standard \ docs)
