(executable
 (name Main)
 (modules Main)
 (libraries
   str unix
   xix_shell
 )
 ; 'byte' is for ocamldebug
 (modes native byte))

(library
  (name xix_shell)
  (wrapped true)
  ; coupling: mkfile SRC variable
  (modules
     Flags Globals
     Ast Meta_ast
     Opcode Meta_opcode
     Dumper_
     Compile
     Runtime
     Pattern
     Fn Var Prompt Status PATH Process Error
     Parser Lexer Parse
     Builtin
     Op_repl Op_process
     Interpreter
     CLI
  )
  (libraries
   xix_commons
   xix_collections
   xix_profiling
  )
 (preprocess (pps ppx_deriving.show ppx_profiling))
  )

(ocamllex Lexer)
(ocamlyacc Parser)

(install
 (package xix)
 (section bin)
 (files
  (Main.exe as rc)
  ; useful to debug, see ../../debug and ocamldebug
  (Main.bc as rc.bc))
)
