(executable
 (name Main)
 (modules Main)
 (libraries
   str unix
   xix_shell
 )
 ; 'byte' is for ocamldebug
 (modes native byte))

(library
  (name xix_shell)
  (wrapped true)
  ; coupling: mkfile SRC variable
  (modules
     Flags Globals
     Ast
     Opcode
     Compile
     Runtime
     Pattern
     Env Fn Var Prompt Status PATH Process Error
     Parser Lexer Parse
     Builtin
     Op_repl Op_process
     Interpreter
     CLI
  )
  (libraries
   xix_commons
   xix_profiling
  )
 (preprocess (pps ppx_deriving.show ppx_profiling))
  )

(ocamllex Lexer)
; old: (ocamlyacc Parser)
(rule
 (targets Parser.ml Parser.mli)
 (deps Parser.mly)
 (action
  (progn
   (run ocamlyacc %{dep:Parser.mly})
   (run perl -p -i -e "s#/[*].*[sex]:.*[*]/##" Parser.ml)
   )))


(install
 (package xix)
 (section bin)
 (files
  (Main.exe as orc)
  ; useful to debug, see ../../debug and ocamldebug
  (Main.bc as orc.bc))
)

(dirs :standard \ docs)
