(executable
 (name test)
 (modules Test)
 (libraries
   testo
   str unix
   xix_commons
   ;xix_collections
   ;xix_objects
   ;xix_executables
 )
 ; 'byte' is for ocamldebug
 (modes native byte))

(install
 (package xix)
 (section bin)
 (files
  (test.exe as test)
  ; useful to debug, see ../../debug and ocamldebug
  (test.bc as test.bc))
)
