(executable
 (name test)
 (modules Test)
 (libraries
   ; std deps
   testo
   str unix

   ; xix libs deps
   xix_commons

   ; testsuites
   xix_shell_tests

 )
 ; 'byte' is for ocamldebug
 (modes native byte))

(install
 (package xix)
 (section bin)
 (files
  (test.exe as test)
  ; useful to debug, see ../../debug and ocamldebug
  (test.bc as test.bc))
)
