(executable
 (name Main)
 (libraries
   str unix
   camlzip
   xix_commons xix_regexp xix_crypto xix_compression
 )
 ; 'byte' is for ocamldebug
 (modes native byte))

(install
 (package xix)
 (section bin)
 (files
  (Main.exe as ogit)
  ; useful to debug, see ../../debug and ocamldebug
  (Main.bc as ogit.bc))
)

(dirs :standard \ docs)
