(executable
 (name Main)
 (libraries
   str unix
   xix_commons
   xix_graphics_input
   xix_plan9
   xix_graphics_ui
 )
 (preprocess (pps ppx_deriving.show))
 ; 'byte' is for ocamldebug
 (modes native byte))

(install
 (package xix)
 (section bin)
 (files
  (Main.exe as orio)
  ; useful to debug, see ../../debug and ocamldebug
  (Main.bc as orio.bc))
)

(dirs :standard \ docs)
