(executable
 (name main)
 (libraries
   xix_commons
 )
 ; 'byte' is for ocamldebug
 (modes native byte))

; lex
(ocamllex Lexer)
; yacc
; old: (ocamlyacc parser)
(rule
 (targets Parser.ml Parser.mli)
 (deps Parser.mly)
 (action
  (progn
   (run ocamlyacc %{dep:Parser.mly})
   ; must take: /*(*s: copyright ocamlyacc *)*/
   ; and just remove it
   (run perl -p -i -e "s#/[*].*[sex]:.*[*]/##" Parser.ml)
   )))

(install
 (package xix)
 (section bin)
 (files
  ; weird: if I use ocamllex I get dune cycle error, weird,
  ; probably because of ocamllex is a special name
  (main.exe as olex)
  ; useful to debug, see ../../debug and ocamldebug
  (main.bc as olex.bc))
)
