(executable
 (name main)
 (libraries
   unix
   xix_commons
 )
 ; 'byte' is for ocamldebug
 (modes native byte))

; lex
(ocamllex Lexer)
; yacc
; old: (ocamlyacc parser)
; but need special processing because of syncweb comments
(rule
 (targets Parser.ml Parser.mli)
 (deps Parser.mly)
 (action
   ;alt: (run ocamlyacc %{dep:Parser.mly})
  (progn
   (run ocamlyacc %{dep:Parser.mly})
   ; must take: /*(*s: copyright ocamlyacc *)*/
   ; and just remove it
   (run perl -p -i -e "s#/[*].*[sex]:.*[*]/##" Parser.ml)
   ; failed with those one because of escaping problems hence simpler regexp
   ; above
   ;(run perl -p -i -e "s#/\\*\\(\\*[sex]: .* \\*\\)/##" Parser.ml)
   ;(run perl -p -i -e s#/\\*\\(\\*[sex]:\ .*\ \\*\\)/## Parser.ml)
   ;(run perl -p -i -e 's#/\*\(\*[sex]: .* \*\)\*/##' Parser.ml)
   )))

(install
 (package xix)
 (section bin)
 (files
  (main.exe as oyacc)
  ; useful to debug, see ../../debug and ocamldebug
  (main.bc as oyacc.bc))
)
